fix api contract and types to switch to complete cookie based auth
